# vegepoly

./: LICENSE  README.md  package-lock.json  package.json  settings.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Export 12-03-2025 00h07-53.txt  settings.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  processing.rs  sampling.rs  utils.rs
src-tauri/src/models/: mod.rs  processing.rs  settings.rs  vegetations.rs
src-tauri/tests/: VEGETATION_ARBRES.csv  test.rs
src/api/: polygon-api.ts  settings-api.ts
src/components/: FileOperations.tsx  Header.tsx  ParametersForm.tsx  PolygonPreview.tsx  ProgressResults.tsx  VegetationTypeSelector.tsx
src/components/modals/: ParamsGuidelinesModal.tsx  PoissonInfoModal.tsx  TypeHelpModal.tsx
src/components/popups/: ParamsGuidelinesPopup.tsx  PoissonInfoPopup.tsx
src/components/shared/: Button.tsx  Card.tsx  Popup.tsx
src/types/: index.ts
