[package]
name = "vegepoly"
version = "0.1.0"
description = "A Tauri App"
authors = ["Donat Fortini"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vegepoly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


geo = { version = "0.29.3", features = ["use-serde"] }
geo-types = "0.7"
csv = "1.1"
rand = "0.9.0"
chrono = "0.4"
tauri-plugin-dialog = "2"
directories = "6.0.0"
xdg-user = "0.2.1"
wkt = "0.14.0"
thiserror = "2.0.12"
